# OpenGP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_old.md  opengp.rb
apps/: CMakeLists.txt
apps/baker/: CMakeLists.txt  baker.cpp  main.cpp  sort.h
apps/glfwviewer/: CMakeLists.txt  fshader.glsl  main.cpp  vshader.glsl
apps/glfwviewer_debug/: CMakeLists.txt  main.cpp
apps/glfwviewer_multiwin/: CMakeLists.txt  main.cpp
apps/glfwviewer_raw/: CMakeLists.txt  main.cpp  vshader.glsl
apps/glfwviewer_vquality/: CMakeLists.txt  main.cpp
apps/imshow/: CMakeLists.txt  EigenImage.h  main.cpp
apps/isoremesh/: CMakeLists.txt  main.cpp
apps/qglviewer/: CMakeLists.txt  QGLMeshLabViewer.h  fshader.glsl  main.cpp  shaders.qrc  vshader.glsl
apps/subdivision/: CMakeLists.txt  main.cpp
cmake/: ConfigureCGAL.cmake  ConfigureCompiler.cmake  ConfigureEigen.cmake  ConfigureGLEW.cmake  ConfigureGLFW.cmake  ConfigureGLFW3.cmake  ConfigureOpenGL.cmake  ConfigureOpenGP.cmake  ConfigureQGLViewer.cmake  ConfigureQt5.cmake  FindAntTweakBar.cmake  FindCGAL.cmake  FindEigen3.cmake  FindGLFW.cmake  FindGLFW3.cmake  FindOpenGP.cmake  FindOpenGeometry.cmake  FindQGLViewer.cmake  stringify_shader.cmake  target_stringify_shader.cmake
data/: CMakeLists.txt  world_day.tga
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  devel.dox  footer.html  layout.xml  tutorial.dox
examples/: CMakeLists.txt  global_properties.cpp  surface_mesh_barycenter.cpp  surface_mesh_basics.cpp  surface_mesh_c++11.cpp  surface_mesh_io.cpp  surface_mesh_iterators.cpp
examples/_python/: Makefile  README.md  Surface_mesh.h  opengp.i  runme.py
examples/data/: bunny.off  square.obj <=== BAD Surface_mesh crash  square.off
examples/surface_mesh_viewer_glfw/: CMakeLists.txt  fshader.glsl  surface_mesh_viewer_glfw.cpp  vshader.glsl
include/OpenGeometry/: headeronly.h
include/OpenGeometry/surface_mesh/: IO.cpp  IO.h  IO_obj.cpp  IO_off.cpp  IO_poly.cpp  IO_stl.cpp  Surface_mesh.cpp  Surface_mesh.h
src/: CMakeLists.txt
src/OpenGP/: Global_properties.h  MLogger.h  NullStream.h  Surface_mesh.cpp  Surface_mesh.h  headeronly.h  properties.h  types.h
src/OpenGP/CGAL/: AABBSearcher.cpp  AABBSearcher.h
src/OpenGP/Eigen/: Image.h
src/OpenGP/GL/: ArcballCamera.h  Buffer.h  Eigen.h  EigenOpenGLSupport3.h  Framebuffer.h  FullscreenQuad.h  GPUMesh.h  GlfwFpsCounter.h  GlfwWindow.h  PointCloudRenderer.h  PointsRenderer.cpp  PointsRenderer.h  QGLFormat32.h  QGLWidget32.h  Scene.h  SceneGraph.h  SceneObject.h  SegmentsRenderer.h  Shader.cpp  Shader.h  SyntheticDepthmap.h  Texture.h  Trackball.h  TrackballCamera.cpp  TrackballCamera.h  TrackballWindow.cpp  TrackballWindow.h  VertexArrayObject.h  check_error_gl.h  gl.h  glfw.h  glfw_helpers.h  glfw_trackball.h  load_shaders.h  opengl_helpers.h  shader_helpers.h  simple_glfw_window.h
src/OpenGP/MATLAB/: random.h
src/OpenGP/Qt/: QGLFormat32.h
src/OpenGP/Qt/qglviewer/: QGLMeshLabViewer.h
src/OpenGP/SphereMesh/: SphereMesh.h  bounding_box.h  helpers.h
src/OpenGP/SphereMesh/GL/: SphereMeshDepthmapRenderer.h  SphereMeshRendererFlat.h
src/OpenGP/SurfaceMesh/: Algorithm.h  Eigen.h  IO.cpp  IO.h  IO_obj.cpp  IO_off.cpp  IO_poly.cpp  IO_stl.cpp  SurfaceMesh.cpp  SurfaceMesh.h  _Eigen.h  bounding_box.h  remesh.cpp  remesh.h
src/OpenGP/SurfaceMesh/GL/: SurfaceMeshDepthmapRenderer.h  SurfaceMeshRenderCloud.h  SurfaceMeshRenderFlat.h  SurfaceMeshRenderShaded.cpp  SurfaceMeshRenderShaded.h  SurfaceMeshRenderVertexNormals.h
src/OpenGP/SurfaceMesh/IO/: IO.cpp  IO.h  IO_obj.cpp  IO_off.cpp  IO_poly.cpp  IO_stl.cpp
src/OpenGP/SurfaceMesh/Subdivision/: Loop.cpp  Loop.h
src/OpenGP/SurfaceMesh/internal/: properties.h
src/OpenGP/qglviewer/: QGLMeshLabViewer.h  helpers.h
src/OpenGP/surface_mesh/: IO.cpp  IO.h  IO_obj.cpp  IO_off.cpp  IO_poly.cpp  IO_stl.cpp  Vector.h  Vector_back_compatibility.h  bounding_box.h  eigen.h  remesh.cpp  remesh.h
src/OpenGP/surface_mesh/GL/: SurfaceMeshRenderFlat.h  SurfaceMeshRenderShaded.h
src/OpenGP/util/: tictoc.h
src/OpenGeometry/: CMakeLists.txt  Surface_mesh_Vector_back_compatibility.h  headeronly.h
src/OpenGeometry/GL/: EigenOpenGLSupport3.h  load_shaders.h  simple_glfw_window.h
src/OpenGeometry/surface_mesh/: IO.h  IO_off.cpp  IO_poly.cpp  IO_stl.cpp  Surface_mesh.cpp  Surface_mesh.h  Vector.h  bounding_box.h  properties.h  types.h
